# CSAT-Compass

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/docs/: md-style-guide.md  zorgi-design-system.md
.github/instructions/: code-formatting.instructions.md  md-style-guide.instructions.md  project-conventies.instructions.md
.github/prompts/: summarize-week.md
.github/workflows/: ci.yml  markdown-lint.yml
.streamlit/: config.toml
WIP/: explore_products.py  handover-fase1-2026-03-19.md  handover-fase2-2026-03-20.md
docs/: CHANGELOG.md  project-journal.md
docs/01-strategisch/: architectuur-beslissingen.md  csat-compass-branding-fr.md  csat-compass-branding-nl.md  projectplan-highlevel.md
docs/02-tactisch/: implementatie-gids.md
docs/02-tactisch/fasen/: fase1-data-analyse.md  fase2-rapportage.md
docs/03-operationeel/: kwaliteitscontrole.md
docs/03-operationeel/tools/: export-data.md
docs/templates/: rapport-fr.md.j2  rapport-nl.md.j2
scripts/: export_data.py
src/csat/config/: pillars.py  settings.py
src/csat/core/analysers/: base_analyser.py  pillar_analyser.py
src/csat/core/exporters/: __init__.py  report_exporter.py
src/csat/core/loaders/: __init__.py  base_loader.py  csv_loader.py  sql_loader.py
src/csat/i18n/: __init__.py  fr.json  nl.json
src/csat/pillars/pharma/: analyser.py  config.py
src/csat/utils/: branding.py  date_utils.py  logger.py
src/static/: zorgi-report.css
tests/: conftest.py
tests/config/: test_pillars.py  test_settings.py
tests/core/: test_loaders.py  test_report_exporter.py
tests/pillars/: test_pharma_analyser.py
tests/utils/: test_branding.py  test_date_utils.py  test_logger.py
tools/: lint.ps1
